[package]
name = "gprs"
version = "0.3.0"
authors = ["Montasir Mirghani <contact@montasir.me>"]
edition = "2021"
description = "GPRS"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/dr-montasir/gprs"
repository = "https://github.com/dr-montasir/gprs"
readme = "README.md"
keywords = ["runtime", "async", "await", "task", "template"]
categories = ["asynchronous", "concurrency", "network-programming", "parser-implementations", "template-engine"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.13.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }

[lib]
name = "gprs"
path = "src/lib.rs"

