[package]
name = "gprs"
version = "1.0.1"
authors = ["Montasir Mirghani <contact@montasir.me>"]
edition = "2021"
description = "A set of filtered and optimized Rust libraries creates a foundation for building modern web frameworks"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/dr-montasir/gprs"
repository = "https://github.com/dr-montasir/gprs"
readme = "README.md"
keywords = ["runtime", "async", "await", "task", "template"]
categories = ["asynchronous", "concurrency", "network-programming", "parser-implementations", "template-engine"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asyncore = "0.2.0"
cans = "0.6.0"
chief = "0.5.0"
futures = "0.3.31"
ghttp = "0.2.0"
mathlab = "1.2.0"
regexy = "0.2.0"
tokio = { version = "1.41.0", features = ["full"] }
wtime = "0.6.0"

[lib]
name = "gprs"
path = "src/lib.rs"

